fix(utils)!: remove okpl/bootstrap spacing variables
Refs. OKN-2522

--- a/src/assets/sass/common/_variables.sass
+++ b/src/assets/sass/common/_variables.sass
@@ -65,11 +65,6 @@ $osg-font-path: '../../../fonts' !default
 // Spacing
 // These variables should only be used to make util classes
 $osg-space-none: 0 !default
-$osg-space-tiny: 10px !default
-$osg-space-small: 20px !default
-$osg-space-medium: 30px !default
-$osg-space-large: 40px !default
-$osg-space-huge: 60px !default
 $osg-space-1: 5px !default
 $osg-space-2: 10px !default
 $osg-space-3: 15px !default
